{
    "name": "ControlsPlayers",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "37c9ce9b-e846-419b-a6e6-eed251309711",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "a6ab0d74-0d0a-4b58-9369-26ca9c7d98e3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "98bbdd39-6468-4eda-9d36-0986113e19a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "1b1ded05-fcfc-42ed-8b5c-fd173f6fb4c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1741b0bc-e7cd-48a1-844e-f56da847c59a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6abe201-c4ff-4b23-8ab1-fa4bcdfc9233",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f541641d-1076-48c3-ab62-3aa2aae27495",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}